# yurtos-kernel

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deno.json
.claude/: settings.json
.claude/skills/typescript-advanced-types/: .skillfish.json
.github/workflows/: deno.yml  guest-compat.yml  open-posix.yml  rust.yml
abi/: Makefile  README.md  compile_flags.txt
abi/conformance/: README.md  SCHEMA.md  chmod.spec.toml  chown.spec.toml  fchdir.spec.toml  getgroups.spec.toml  gethostname.spec.toml  identity.spec.toml  if_indextoname.spec.toml  if_nametoindex.spec.toml  openat.spec.toml  parity-baseline.toml  poll.spec.toml  ppoll.spec.toml  priority.spec.toml  pselect.spec.toml  pthread-multi.spec.toml  pthread_sigmask.spec.toml  sched_getparam.spec.toml  select.spec.toml  sigaltstack.spec.toml  sigprocmask.spec.toml  sigsuspend.spec.toml  sigtimedwait.spec.toml
abi/conformance/c/: affinity-canary.c  dlopen-canary.c  dup2-canary.c  exec-canary.c  fetch-canary.c  fork-canary.c  getgroups-canary.c  libyurt_dlcanary.c  locale-canary.c  pipe-canary.c  popen-canary.c  posix-runtime-canary.c  pthread-canary.c  pthread-main-exit-canary.c  pthread-multi-canary.c  resource-canary.c  setjmp-canary.c  signal-canary.c  socket-canary.c  socket-listen-canary.c  socket-listen-denied-canary.c  spawn-canary.c  spawn-wait-canary.c  stdio-canary.c  system-canary.c  unix-canary.c
abi/contract/: kernel_host_abi.toml  yurt_abi.toml  yurt_abi_methods.toml
abi/include/: dirent.h  dlfcn.h  fcntl.h  grp.h  mntent.h  netdb.h  poll.h  pthread.h  pwd.h  sched.h  setjmp.h  signal.h  stdio.h  stdlib.h  syslog.h  termios.h  time.h  unistd.h  yurt_abi.h  yurt_preinclude.h
abi/include/asm/: types.h
abi/include/linux/: types.h  version.h  vt.h
abi/include/net/: if.h  if_arp.h
abi/include/netinet/: in.h  tcp.h
abi/include/sys/: epoll.h  file.h  mman.h  reboot.h  resource.h  sendfile.h  socket.h  stat.h  sysinfo.h  sysmacros.h  time.h  times.h  un.h  vfs.h  wait.h
abi/rust/yurt-abi/: Cargo.toml
abi/rust/yurt-abi-sys/: Cargo.toml  build.rs
abi/rust/yurt-abi-sys/src/: lib.rs
abi/rust/yurt-abi-sys/tests/: build_rs.rs
abi/src/: yurt_command.c  yurt_cwd.c  yurt_dl_main.c  yurt_dlfcn.c  yurt_dup.c  yurt_epoll.c  yurt_exec.c  yurt_fetch.c  yurt_fnmatch.c  yurt_fork.c  yurt_fs.c  yurt_ioctl.c  yurt_markers.h  yurt_mktemp.c  yurt_mman.c  yurt_netdb.c  yurt_netif.c  yurt_pipe.c  yurt_poll.c  yurt_process.c  yurt_pthread.c  yurt_resource.c  yurt_runtime.h  yurt_sched.c  yurt_select.c  yurt_setjmp.c  yurt_signal.c  yurt_socket.c  yurt_spawn.c  yurt_tty.c  yurt_unistd.c  yurt_version.c  yurt_write.c
abi/tests/: check_archive.sh  check_headers.sh  check_markers.sh  check_version_symbol.sh
abi/toolchain/yurt-toolchain/: Cargo.toml
abi/toolchain/yurt-toolchain/src/: archive.rs  cargo_yurt.rs  conform.rs  env.rs  features.rs  lib.rs  main.rs  maturin_yurt.rs  precheck.rs  rust_std.rs  rustc_wrapper.rs  spec.rs  wasi_sdk.rs  wasm_opt.rs
abi/toolchain/yurt-toolchain/tests/: cargo_yurt_dry_run.rs  cli.rs  conform.rs  guest_compat_workflow.rs  maturin_yurt.rs  pthread_shim_ownership.rs  rust_std.rs  signature_check.rs  spec_parsing.rs  trace_diff.rs
abi/toolchain/yurt-wasi-postlink/: Cargo.toml
docs/: ARCHITECTURE.md  images.md
docs/abi/: native-syscall-abi.md
docs/contributing/: gates.md
docs/superpowers/findings/: 2026-04-22-busybox-testsuite-on-yurt.md  2026-05-04-busybox-testsuite-on-yurt.md
docs/superpowers/plans/: 2026-05-04-posix-libc-runtime-hardening.md  2026-05-04-vfs-overlay-base-root.md  2026-05-06-wasmtime-runtime-port.md  2026-05-07-ci-precommit-gates.md  2026-05-07-native-syscall-abi-rust-core.md  2026-05-07-yurt-image-runtime-phase1.md  2026-05-08-yurt-cc-drop-in-c-compiler.md  2026-05-08-yurt-image-build.md  2026-05-08-yurtfile-image-build.md  2026-05-09-sandboxed-kernel.md  2026-05-09-shared-libraries-phase1.md  2026-05-11-af-unix.md  2026-05-12-remove-host-json.md  2026-05-13-kernel-socket-fds.md  2026-05-13-remove-remaining-abi-json.md  2026-05-13-worker-sab-pthread-runtime.md  2026-05-14-rust-fd-dispatch-and-socket-shims.md  2026-05-14-rust-kernel-af-unix-path-stream.md  2026-05-14-rust-kernel-af-unix-socketpair.md  2026-05-15-resolve-rust-kernel-review-backlog.md  2026-05-15-rust-kernel-dispatcher-split.md  2026-05-15-rust-kernel-parity.md  2026-05-15-rust-thread-process-parity.md  2026-05-16-fd-vfs-completion.md  2026-05-16-process-model-completion.md  2026-05-16-rust-fork-parity.md  2026-05-16-sockets-network-completion.md  2026-05-16-thin-parity-gate.md  2026-05-17-async-worker-host-dispatcher.md  2026-05-17-b2.9-openat-inode-anchoring.md  2026-05-17-contract-notes.md  (+15 more)
scripts/: abi-check-coreutils.sh  build-c-port.sh  build-rust-std.sh  build-standard-image.ts  cargo-check-changed.sh  check-package-versions.ts  check-runtime-engines.sh  check-rust-std-matrix.sh  check-rust-std-source-layout.sh  dev-init.sh  generate-native-abi.test.ts  generate-native-abi.ts  guest-compat-check-coreutils.sh  install-hooks.sh  install-yurt-toolchain.sh  lint-clippy-changed.sh  open-posix-harness.test.ts  open-posix-harness.ts  rebuild-threaded-cpython.sh  rebuild-threaded-cpython.test.ts  run-busybox-testsuite-in-sandbox.ts  run-jupyter.ts  run-wasm-test-in-sandbox.ts  setup-dev-env.sh  stage-cpython-fixtures.sh  stage-jupyter-fixtures.sh  test-all-yurt-repos.sh
scripts/diagnostics/: launch_ipkernel.py  run_jupyter_smoke.ts  run_zmq_reactor_bind.ts
test-fixtures/shell/: Cargo.toml
test-fixtures/shell-exec/: Cargo.toml
test-fixtures/shell-exec/src/: builtins.rs  executor.rs  expand.rs  host.rs  io.rs  main.rs  state.rs  test_support.rs  virtual_commands.rs  wheel.rs
test-fixtures/wasm/spawn-deep/: Cargo.toml
test-fixtures/wasm/spawn-deep/src/: main.rs
test-fixtures/wasm/spawn-trap-child/: Cargo.toml
test-fixtures/wasm/spawn-trap-child/src/: main.rs
test-fixtures/wasm/trap-child/: Cargo.toml
test-fixtures/wasm/trap-child/src/: main.rs
test-fixtures/yurt-process/: Cargo.toml
test-fixtures/zstd-sys-smoke/: Cargo.toml
(+171 files in other folders)
