[workspace]
members = [
  "packages/shell",
  "packages/shell-exec",
  "packages/yurt-process",
  "packages/test-fixtures/hello",
  "packages/test-fixtures/echo-args",
  "packages/test-fixtures/cat-stdin",
  "packages/test-fixtures/wc-bytes",
  "packages/test-fixtures/true-cmd",
  "packages/test-fixtures/false-cmd",
  "packages/guest-compat/toolchain/cpcc",
  "packages/guest-compat/rust/yurt-guest-compat-sys",
  "packages/guest-compat/rust/yurt-guest-compat",
  "packages/guest-compat/rust/yurt-wasi-shims",
  "packages/guest-compat/toolchain/yurt-wasi-postlink",
  "packages/guest-compat/conformance/rust/dup2-canary",
  "packages/guest-compat/conformance/rust/getgroups-canary",
  "packages/guest-compat/conformance/rust/affinity-canary",
  "packages/guest-compat/conformance/rust/signal-canary",
  "packages/guest-compat/conformance/rust/std-env-process-canary",
  "packages/guest-compat/conformance/rust/std-file-lock-canary",
  "packages/guest-compat/conformance/rust/std-fs-canary",
  "packages/guest-compat/conformance/rust/std-net-connect-canary",
  "packages/guest-compat/conformance/rust/std-net-hostname-canary",
  "packages/guest-compat/conformance/rust/std-net-listener-canary",
  "packages/guest-compat/conformance/rust/std-net-nodelay-canary",
  "packages/guest-compat/conformance/rust/std-net-nonblocking-canary",
  "packages/guest-compat/conformance/rust/std-net-peek-canary",
  "packages/guest-compat/conformance/rust/std-net-peer-addr-canary",
  "packages/guest-compat/conformance/rust/std-net-shutdown-canary",
  "packages/guest-compat/conformance/rust/std-net-socket-addr-canary",
  "packages/guest-compat/conformance/rust/std-net-stream-canary",
  "packages/guest-compat/conformance/rust/std-net-take-error-canary",
  "packages/guest-compat/conformance/rust/std-net-try-clone-canary",
  "packages/guest-compat/conformance/rust/std-paths-canary",
  "packages/guest-compat/conformance/rust/std-process-child-stdout-canary",
  "packages/guest-compat/conformance/rust/std-process-env-cwd-canary",
  "packages/guest-compat/conformance/rust/std-process-output-canary",
  "packages/guest-compat/conformance/rust/std-process-spawn-stdio-canary",
  "packages/guest-compat/conformance/rust/std-process-status-canary",
  "packages/guest-compat/conformance/rust/std-process-stdio-from-canary",
  "packages/guest-compat/conformance/rust/std-tempdir-canary",
  "packages/guest-compat/conformance/rust/std-thread-canary",
]
resolver = "2"
