[workspace]
members = [
  "packages/runtime-wasmtime",
  "packages/kernel-host-interface-core",
  "packages/kernel-host-interface-wasmedge",
  "packages/kernel-host-interface-wasmer",
  "packages/kernel-wasm",
  "test-fixtures/yurt-process",
  "test-fixtures/shell",
  "test-fixtures/shell-exec",
  "test-fixtures/zstd-sys-smoke",
  "abi/toolchain/yurt-toolchain",
  "abi/rust/yurt-abi-sys",
  "abi/rust/yurt-abi",
  "abi/rust/yurt-wasi-shims",
  "abi/toolchain/yurt-wasi-postlink",
  "test-fixtures/wasm/hello",
  "test-fixtures/wasm/echo-args",
  "test-fixtures/wasm/cat-stdin",
  "test-fixtures/wasm/wc-bytes",
  "test-fixtures/wasm/true-cmd",
  "test-fixtures/wasm/false-cmd",
  "test-fixtures/wasm/cat-ramfs",
  "test-fixtures/wasm/proc-cmdline",
  "test-fixtures/wasm/child-exit7",
  "test-fixtures/wasm/spawn-wait",
  "test-fixtures/wasm/spawn-thread-child",
  "test-fixtures/wasm/spawn-badreq",
  "test-fixtures/wasm/spawn-deep",
  "test-fixtures/wasm/trap-child",
  "test-fixtures/wasm/spawn-trap-child",
  "abi/conformance/rust/dup2-canary",
  "abi/conformance/rust/getgroups-canary",
  "abi/conformance/rust/affinity-canary",
  "abi/conformance/rust/signal-canary",
  "abi/conformance/rust/socket-rust-canary",
  "abi/conformance/rust/std-env-process-canary",
  "abi/conformance/rust/std-file-lock-canary",
  "abi/conformance/rust/std-fs-canary",
  "abi/conformance/rust/std-net-connect-canary",
  "abi/conformance/rust/std-net-hostname-canary",
  "abi/conformance/rust/std-net-listener-canary",
  "abi/conformance/rust/std-net-nodelay-canary",
  "abi/conformance/rust/std-net-nonblocking-canary",
  "abi/conformance/rust/std-net-peek-canary",
  "abi/conformance/rust/std-net-peer-addr-canary",
  "abi/conformance/rust/std-net-shutdown-canary",
  "abi/conformance/rust/std-net-socket-addr-canary",
  "abi/conformance/rust/std-net-stream-canary",
  "abi/conformance/rust/std-net-take-error-canary",
  "abi/conformance/rust/std-net-try-clone-canary",
  "abi/conformance/rust/std-paths-canary",
  "abi/conformance/rust/std-process-child-stdout-canary",
  "abi/conformance/rust/std-process-env-cwd-canary",
  "abi/conformance/rust/std-process-output-canary",
  "abi/conformance/rust/std-process-spawn-stdio-canary",
  "abi/conformance/rust/std-process-status-canary",
  "abi/conformance/rust/std-process-stdio-from-canary",
  "abi/conformance/rust/std-tempdir-canary",
  "abi/conformance/rust/std-thread-canary",
]
# Conformance canaries are WASM-only targets — build with --target wasm32-wasip1.
# Exclude them from the default native build to avoid link failures on macOS.
default-members = [
  "test-fixtures/yurt-process",
  "abi/toolchain/yurt-toolchain",
  "abi/rust/yurt-abi-sys",
  "abi/rust/yurt-abi",
  "abi/rust/yurt-wasi-shims",
  "abi/toolchain/yurt-wasi-postlink",
]
resolver = "2"
