[package]
name = "yurt-shell-exec"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yurt-shell-exec"
path = "src/main.rs"

[lib]
name = "yurt_shell_exec"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
libc = "0.2"
yurt-shell = { path = "../shell" }
yurt-process = { path = "../yurt-process" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
